# dbt-surrogate-key-gen

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
surrogate-key-gen/: README.md  data-model.md
surrogate-key-gen/sk_gen_test/: Makefile  dbt_project.yml  selectors.yml
surrogate-key-gen/sk_gen_test/analyses/control_data/: get_next_sk.sql  int64_km_sample_entity.sql  key_map.sql  md5_km_sample_entity.sql  uuid_km_sample_entity.sql
surrogate-key-gen/sk_gen_test/analyses/raw_data/: sample_data.sql
surrogate-key-gen/sk_gen_test/models/control_data/: int64_km_sample_entity.sql  km_sample_data.sql  md5_km_sample_entity.sql  schema.yml  uuid_km_sample_entity.sql
surrogate-key-gen/sk_gen_test/models/raw_data/: schema.yml
surrogate-key-gen/sk_gen_test/models/src_data/: sample_data.sql  schema.yml
surrogate-key-gen/sk_gen_test/models/trgt_data/: schema.yml
surrogate-key-gen/sk_gen_test/models/trgt_tx/: int64_new_sample_entity.sql  int64_newkm_sample_entity.sql  int64_tx_sample_entity.sql  int64_updt_sample_entity.sql  md5_new_sample_entity.sql  md5_newkm_sample_entity.sql  md5_tx_sample_entity.sql  md5_updt_sample_entity.sql  new_sample_data.sql  newkm_sample_data.sql  schema.yml  tx_sample_data.sql  updt_sample_data.sql  uuid_new_sample_entity.sql  uuid_newkm_sample_entity.sql  uuid_tx_sample_entity.sql  uuid_updt_sample_entity.sql  ws_sample_data.sql
surrogate-key-gen/sk_gen_test/seeds/control_data/: control_data.yml  x_key_map.csv  x_km_sample_data.csv
surrogate-key-gen/sk_gen_test/seeds/sample_data/: data-001.csv  data-002.csv  data-003.csv  (+1 more)
(+1 files in other folders)
