[tool.poetry]
name = "dbt-spikes"
version = "0.1.0"
description = "dbt spikes and pocs"
authors = ["Chris Ottinger <chris@gammadata.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
